--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
+        "sass": "^1.89.2",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.7"
     }
 }
